--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aubergiste-website",
+  "name": "spatiabot-website",
   "version": "1.0.0",
   "description": "Learn languages by fun !",
   "author": "Heckayel",
@@ -20,18 +20,24 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@types/socket.io": "^2.1.8",
+    "@types/vue-markdown": "^2.2.1",
+    "@vuex-orm/core": "^0.36.3",
     "core-js": "3",
     "jsonwebtoken": "^8.5.1",
     "nuxt": "*",
     "nuxt-class-component": "^1.3.0",
     "nuxt-matomo": "^1.2.3",
     "nuxt-property-decorator": "^2.8.8",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue-class-component": "^7.2.4",
+    "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^9.0.0",
     "vue-socket.io": "^3.0.9",
-    "vuetify": "^2.3.10"
+    "vuetify": "^2.3.10",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@mdi/font": "^5.1.45",
